--- a/www/index.html
+++ b/www/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8"/>
+        <script type="application/javascript" src="src/index.js"></script>
+    </head>
+    <body onload="main();">
+        <canvas id="game">Cannot start the game because your browser doesn't support the canvas element.</canvas>
+    </body>
+</html>
